--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,3 +7,6 @@ python-dotenv>=1.0.0
 transformers>=4.47.0
 torch>=2.5.0
 openai>=1.57.0
+tree-sitter>=0.25.0
+tree-sitter-language-pack>=0.11.0
+httpx>=0.27.0
