Add GitHub token support for higher rate limits

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,3 +16,4 @@ FRONTEND_URL=https://your-frontend-domain.com
 AI_API_KEY=
 AI_PROVIDER=openai
 AI_MODEL=gpt-4o-mini
+GITHUB_TOKEN=your_github_token_here
